# LangMetres

./: Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  langmetres.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docker-release.yml
backend/: .flake8  .gitignore  pyproject.toml
backend/app/: __main__.py
backend/app/api/: router.py
backend/app/api/endpoints/: completions.py  envs.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: actions.ts  layout.tsx  page.tsx
frontend/src/assets/: litellm-1-53-7_model_price.json
frontend/src/components/env-settings/: env-settings.tsx
frontend/src/components/layout/: footer.tsx
frontend/src/components/model-selection/: model-config-slider.tsx  model-selector.tsx
frontend/src/components/test-case/: response-card.tsx  test-case-card.tsx  test-case-list.tsx
frontend/src/lib/: colors.ts  export.ts  import.ts
frontend/src/types/: index.ts
